--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "app-layout": "PolymerElements/app-layout#^0.10.5",
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
-    "app-route": "PolymerElements/app-route#^0.9.2"
+    "app-route": "PolymerElements/app-route#^0.9.2",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
