--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
     "app-route": "PolymerElements/app-route#^0.9.2",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0"
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "iron-image": "PolymerElements/iron-image#^1.2.5"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
