--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
     "app-route": "PolymerElements/app-route#^0.9.2",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "iron-image": "PolymerElements/iron-image#^1.2.5"
+    "iron-image": "PolymerElements/iron-image#^1.2.5",
+    "paper-input": "PolymerElements/paper-input#^1.1.20"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
