--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "app-route": "PolymerElements/app-route#^0.9.2",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "iron-image": "PolymerElements/iron-image#^1.2.5",
-    "paper-input": "PolymerElements/paper-input#^1.1.20"
+    "paper-input": "PolymerElements/paper-input#^1.1.20",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.7"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
