--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.7",
     "paper-swatch-picker": "^1.0.2",
     "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5",
-    "paper-card": "PolymerElements/paper-card#^1.1.4"
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "paper-styles": "PolymerElements/paper-styles#^1.1.5",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
