--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5",
     "paper-card": "PolymerElements/paper-card#^1.1.4",
     "paper-styles": "PolymerElements/paper-styles#^1.1.5",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.5",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
