--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "paper-styles": "PolymerElements/paper-styles#^1.1.5",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.5",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
