--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.5",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.2",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.4.1"
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.4.1",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.3.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
