--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.3.0",
     "polymerfire": "firebase/polymerfire#^0.10.3",
     "app-storage": "PolymerElements/app-storage#^0.9.0",
-    "platinum-sw": "PolymerElements/platinum-sw#^1.3.0"
+    "platinum-sw": "PolymerElements/platinum-sw#^1.3.0",
+    "iron-signals": "PolymerElements/iron-signals#^1.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
