--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "polymerfire": "firebase/polymerfire#^0.10.3",
     "app-storage": "PolymerElements/app-storage#^0.9.0",
     "platinum-sw": "PolymerElements/platinum-sw#^1.3.0",
-    "iron-signals": "PolymerElements/iron-signals#^1.0.3"
+    "iron-signals": "PolymerElements/iron-signals#^1.0.3",
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
