--- a/docs/bower.json
+++ b/docs/bower.json
@@ -30,7 +30,8 @@
     "app-storage": "PolymerElements/app-storage#^0.9.0",
     "platinum-sw": "PolymerElements/platinum-sw#^1.3.0",
     "iron-signals": "PolymerElements/iron-signals#^1.0.3",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
+    "sw-toolbox": "^3.6.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
